# chemtok

./: .gitignore  CLAUDE.md  README.md  augment.py  build_db.py  cluster_reactions.py  data_augmentation_prompt.md  dev.sh  merge_dbs.py  pyproject.toml  server.py
crd/: build_crd_db.py
data/: reactions_augmented_combined.db
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts  wrangler.jsonc
web/src/: App.tsx  index.css
web/src/components/: MoleculeGroup.tsx  MoleculeRenderer.tsx  ReactionCard.tsx  SwipeContainer.tsx
web/src/hooks/: useFavorites.ts  useTheme.ts
web/src/services/: api.ts
web/src/types/: reaction.ts  smiles-drawer.d.ts
web/worker/: index.ts  seed.sql  seed_clean.sql
